--- a/index.html
+++ b/index.html
@@ -5,10 +5,47 @@
     <title>Landing Page Template</title>
 </head>
 <body>
-    <div class="first"></div>
-    <div class="second"></div>
-    <div class="third"></div>
-    <div class="fourth"></div>
-    <div class="footer"></div>
+    <div class="first">
+        <div class="header">
+            <img>
+            <a href="#">1</a>
+            <a href="#">2</a>
+            <a href="#">3</a>
+        </div>
+        <div>
+            <h1>title</h1>
+            <p>subtext</p>
+            <div class="button"></div>
+        </div>
+        <img>
+    </div>
+
+    <div class="second">
+        <h3>title</h3>
+        <img>
+        <p></p>
+        <img>
+        <p></p>
+        <img>
+        <p></p>
+        <img>
+        <p></p>
+    </div>
+
+    <div class="third">
+        <p>quote</p>
+        <p>citation</p>
+    </div>
+
+    <div class="fourth">
+        <div class="signupbox"></div>
+        <h4>title</h4>
+        <div class="button"></div>
+    </div>
+
+    <div class="footer">
+
+    </div>
+
 </body>
 </html>
