Complete first and second sections

--- a/index.html
+++ b/index.html
@@ -3,33 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <title>Landing Page Template</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+
+    
     <div class="first">
         <div class="header">
-            <img>
-            <a href="#">1</a>
-            <a href="#">2</a>
-            <a href="#">3</a>
+            <div class="logo">Header Logo</div>
+            <div class="hyper">
+                <a href="#">header link 1</a>
+                <a href="#">header link 2</a>
+                <a href="#">header link 3</a>
+            </div>
         </div>
-        <div>
-            <h1>title</h1>
-            <p>subtext</p>
-            <div class="button"></div>
+        <div class="main">
+            <div class="hero">
+                <p class="heromaintext">This is my awesome website!</p>
+                <p class="sub">This is the subtext under the main hero text!</p>
+                <input class="button" type="button" value="Sign up">
+            </div>
+            <div class="image">Image placeholder!</div>
         </div>
-        <img>
     </div>
 
     <div class="second">
-        <h3>title</h3>
-        <img>
-        <p></p>
-        <img>
-        <p></p>
-        <img>
-        <p></p>
-        <img>
-        <p></p>
+        <p class="infoheader">Some random information!</p>
+        <div class="mediaobject">
+            <div class="1">
+                <div class="image2"></div>
+                <p>This is the subtext under an illustration or image.</p>
+            </div>
+            <div class="2">
+                <div class="image2"></div>
+                <p>This is the subtext under an illustration or image.</p>
+            </div>
+            <div class="3">
+                <div class="image2"></div>
+                <p>This is the subtext under an illustration or image.</p>
+            </div>
+            <div class="3">
+                <div class="image2"></div>
+                <p>This is the subtext under an illustration or image.</p>
+            </div>
+        </div>
     </div>
 
     <div class="third">
@@ -44,7 +61,7 @@
     </div>
 
     <div class="footer">
-
+        <p>copyright</p>
     </div>
 
 </body>
