Add quote and citation template

--- a/index.html
+++ b/index.html
@@ -50,8 +50,10 @@
     </div>
 
     <div class="third">
-        <p>quote</p>
-        <p>citation</p>
+        <div class="thirdcontent">
+            <div class="quote">This is some text that acts as a placeholder for a quote that can be added to this website. It is here just to take up some space until I find some actual use for this template.</div>
+            <div class="citation">Me, for now</div>
+        </div>
     </div>
 
     <div class="fourth">
