--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div class="third">
         <div class="thirdcontent">
             <div class="quote">This is some text that acts as a placeholder for a quote that can be added to this website. It is here just to take up some space until I find some actual use for this template.</div>
-            <div class="citation">Me, for now</div>
+            <div class="citation">-Me, for now</div>
         </div>
     </div>
 
