Button instead of div in fourth

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <div class="fourth">
         <div class="signupbox"></div>
         <h4>title</h4>
-        <div class="button"></div>
+        <input class="button" type="button" value="Sign up">
     </div>
 
     <div class="footer">
