Add divs and format fourth layout

--- a/index.html
+++ b/index.html
@@ -57,13 +57,18 @@
     </div>
 
     <div class="fourth">
-        <div class="signupbox"></div>
-        <h4>title</h4>
-        <input class="button" type="button" value="Sign up">
+        <div class="signupbox">
+            <div class="fourthtext">
+                <div>title</div>
+                <div class="sub"></div>
+            </div>
+            <input class="button" type="button" value="Sign up">
+        </div>
     </div>
 
     <div class="footer">
         <p>copyright</p>
+        
     </div>
 
 </body>
