Finish fourth section

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
     <div class="fourth">
         <div class="signupbox">
             <div class="fourthtext">
-                <div>title</div>
-                <div class="sub"></div>
+                <div class="fourthtitle">Call to action! It's time!</div>
+                <div class="sub">Press the button to sign up now!</div>
             </div>
             <input class="button" type="button" value="Sign up">
         </div>
